--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ main {
   padding: 10px 30px;
   border: 1px solid var(--main-color);
   border-radius: 50px;
-  width: 350px;
+  width: 320px;
   justify-content: space-between;
 }
 
@@ -104,6 +104,57 @@ main {
 
 .planeta-item.ativo img {
   display: block;
+}
+
+.planeta-item .acesso-planeta {
+  display: none;
+  align-items: center;
+  gap: 10px;
+}
+
+.planeta-item.ativo .acesso-planeta {
+  display: flex;
+}
+
+.planeta-item.ativo img {
+  height: 50px;
+  display: block;
+}
+
+.planeta-item.ativo a {
+  background-color: white;
+  color: var(--main-color);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  transition:
+    transform 0.3s ease,
+    background-color 0.3s ease;
+  animation: pulse-arrow 1.5s infinite;
+}
+
+.planeta-item.ativo a:hover {
+  transform: scale(1.2);
+  background-color: var(--main-color);
+  color: white;
+}
+
+@keyframes pulse-arrow {
+  0% {
+    transform: translateX(0);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+  }
+  50% {
+    transform: translateX(5px);
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 
 .adicionar {
